--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "blob": "^0.1.0",
     "formik": "^2.2.9",
     "postcss": "^8.4.14",
     "react": "^18.1.0",
